Fix behaviour when mobile URL bar disappears + menu not overlapping scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -10,7 +11,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  overflow-y: hidden;
   -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
   -moz-osx-font-smoothing: grayscale;
   
 }
